[package]
name = "playground"
version = "0.1.0"
authors = ["jskzyero <jskyzero@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
protobuf = { version = "2", features = ["with-bytes"] }
support = { path = "support" }
leetcode = { path = "leetcode" }
