[package]
name = "engine"
version = "0.1.0"
authors = ["jskyzero <jskyzero@outlook.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
# cgmath = "0.16.1"
gl = "0.10.0"
[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false
# image = "0.19.0"
# # only needed from chapter 3 on
# tobj = "0.1.6"
# num = "0.2.0"
# rand = "0.5.5"